--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-use-controllable-state": "^1.2.2",
+    "@shikijs/transformers": "^3.14.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
@@ -23,6 +25,8 @@
     "radix-ui": "^1.4.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-icons": "^5.5.0",
+    "shiki": "^3.14.0",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
